ver 2.9.9 (15.00.00)
    : 회신문자 하이픈과 관계없이 전송가능하게 (Lacooon님 제안)
    : 모바일 빌더 연동시 게시물 링크 교정 (edccesl님 제안)

    miwit/HISTORY
    miwit/mw.lib/mw.function.lib.php
    miwit/mw.proc/mw.proc.sms.php
 
ver 2.9.8 (15.11.08)
    : 반응형 지원!!
    : 갤러리형등 반응형 지원 (신비님 제안)
    : 요약형 디자인 개선 (신비님 제안) 
    : 링크에 이미지 경로 포함시 본문 표시 오류 수정 (신비님 제안)
    : 목록에서 선택 비밀글 설정 (의자왕님 제안)
    : 외부 이미지 썸네일 생성 후 글 수정시 이미지 경로 변경 체크 (도장관님 제안)
    : 나이제한 오류 수정 (정해국치님 제안)
    : 뷰페이지에 스킨설정 화면 링크 추가 (젬스박님 제안)
    : 뷰페이지에 보드설정 화면 링크 추가
    : font-awesome 4.4.0 업그레이드
    : 그누보드5 - 휴지통 사용시 최근게시물 cache 삭제
    : 그누보드5 - 워터마크 본문 표시 오류 수정 (잿빛푸우님 제안)
    : 그누보드5 모바일 경로 오류수정 (엑노님 제안)
    : 게시물 선택하지 않고 공지올림/내림 진행시 오류수정  (엑노님 제안) 
    : 댓글 관리자 자신의 글 추천 가능 (크레이티브님 제안)
    : 공지필수 데이터 filter 처리
    : 제목 word-break 적용
    : mysqli 지원
    : 모바일빌더 연동 개선

    miwit/HISTORY
    miwit/_common.php
    miwit/mw.adm/_common.php
    miwit/mw.adm/mw.config.php
    miwit/mw.lib/mw.function.lib.php
    miwit/mw.lib/mw.skin.basic.lib.php
    miwit/mw.proc/_common.php
    miwit/mw.proc/mw.g5.adapter.extend.php
    miwit/mw.proc/mw.file.viewer.php
    miwit/mw.proc/mw.asset.php
    miwit/mw.proc/mw.top.button.php
    miwit/mw.proc/mw.notice.check.php
    miwit/mw.proc/mw.comment.good.php
    miwit/mw.proc/mw.list.1n1.php
    miwit/mw.proc/mw.scrap.php
    miwit/mw.proc/mw.vote.php
    miwit/mw.proc/mw.copy.new.php
    miwit/mw.proc/mw.jump.php
    miwit/mw.proc/mw.key.php
    miwit/mw.geditor/_common.php
    miwit/mw.okname/_common.php
    miwit/mw.js/mw.g5.adapter.js.php
    miwit/mw.css/font-awesome-4.4.0/*
    miwit/list.skin.php
    miwit/view.skin.php
    miwit/view_head.skin.php
    miwit/view_comment.skin.php
    miwit/view_comment_head.skin.php
    miwit/write.skin.php
    miwit/write_update.skin.php
    miwit/secret_all.php
    miwit/style.common.css
 
ver 2.9.7 (15.09.23)
    : 파일 업로드 인젝션 취약점 보안 (한국인터넷진흥원에서 알려 주셨습니다.)

    miwit/HISTORY
    miwit/mw.geditor/upload.php
    miwit/mw.lib/mw.function.lib.php